public/stylesheets/custom.css
body {
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;

  font-family: Arial, sans-serif;
}

a {
  text-decoration: none; /* Removes underline from links */
}

a:hover {
  text-decoration: underline; /* Adds underline on hover for visual feedback */
}

main {
  margin-left: 1em;
  margin-right: 1em;
  flex: 1; /* expand to fill the remaining space - keeps footer on the bottom */
}

footer {
  padding: 1em;
  padding-bottom: 0;
  color: #666666;
  text-align: center;
  font-size: 0.9em;
}

fieldset {
  margin: 1.5em 0 0 0;
  padding: 0;
}

fieldset li {
  padding-bottom: 1em;
  list-style-type: none;
}

label {
  float: left;
  width: 10em;
  margin-right: 1em;
  text-align: right;
}

.live_results {
  float: right;
  width: 8em;
  margin-right: 1em;
  text-align: left;
}

.custom_width {
  width: 30em;
}

.hidden {
  display: none !important;
}

.highlight {
  background-color: #fff1a6;
}

li#beds_and_plates {
  clear: both;
}

li#beds_and_plates ul fieldset {
  display: inline;
  margin-right: 0px;
  margin-left: 0px;
  padding-right: 5px;
  padding-left: 0px;
}

label.layout_input_text {
  display: inline;
  margin-right: 5px;
  margin-left: 0px;
  padding-right: 0px;
  padding-left: 0px;
  width: 2.5em;
}

.bed_layout ul {
  margin: 0px;
  padding: 0px;
}

li#beds_and_plates ul {
  margin: 0px;
  padding: 0px;
}

table,
td,
th {
  border: 1px solid #ddd;
  text-align: left;
}

table {
  border-collapse: collapse;
}

th,
td {
  padding: 15px;
}

